[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 29.5 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 0, 35 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 0, -33 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
move_speed = 500

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0.5 )
shape = SubResource( 1 )

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.290196, 1 )
texture = ExtResource( 1 )

[node name="GroundDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector"]
shape = SubResource( 2 )

[node name="climb_wall" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="climb_wall"]
shape = SubResource( 3 )

[connection signal="body_entered" from="GroundDetector" to="." method="_on_GroundDetector_body_entered"]
[connection signal="body_exited" from="GroundDetector" to="." method="_on_GroundDetector_body_exited"]
[connection signal="body_entered" from="climb_wall" to="." method="_on_climb_wall_body_entered"]
[connection signal="body_exited" from="climb_wall" to="." method="_on_climb_wall_body_exited"]
